# velvetgrl

./: .gitignore  Dockerfile  astro.config.mjs  docker-compose.yml  netlify.toml
agents/: __init__.py  __main__.py  claude_client.py  config.py  db.py  pyproject.toml
agents/analytics/: __init__.py  collector.py  insights.py  pinterest_metrics.py  reporter.py
agents/image_sourcer/: __init__.py  flux_client.py  stock_photos.py
agents/orchestrator/: __init__.py  pipeline.py  scheduler.py
agents/pinterest/: __init__.py  api.py  browser.py  image_gen.py  pin_generator.py  refresh.py
agents/publisher/: __init__.py  publish.py
agents/researcher/: __init__.py  calendar_generator.py  keyword_scraper.py  topic_selector.py
agents/writer/: __init__.py  blog_writer.py
config/: boards.json  categories.json  settings.json.example
docs/plans/: 2026-04-11-hervisioncraft-autopilot-design.md  2026-04-12-implementation-plan.md
public/: robots.txt
scripts/: backfill_post_images.py  fix_jpeg_as_png.py  run_cycle.py
src/: content.config.ts
src/components/: Footer.astro  Header.astro  SchemaArticle.astro
src/content/blog/: 15-best-drugstore-makeup-products-that-rival-highend-brands.md  15-boho-kitchen-ideas.md  (+11 more)
src/layouts/: BaseLayout.astro
src/pages/: [category].astro  about.astro  disclaimer.astro  imprint.astro  index.astro  privacy.astro  rss.xml.ts
src/styles/: global.css
tests/: test_image_sourcer.py  test_pin_generator.py  test_researcher.py  test_writer.py
website/: astro.config.mjs  package-lock.json  package.json
website/src/: content.config.ts
(+30 files in other folders)
